Another attempt at horizontal scroll fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -202,6 +202,7 @@ th {
 /* COMPARISONS TABLE */
 
 .scroll-table_comps {
+    table-layout: fixed;
 }
 
 .scroll-table_comps th {
